<?xml version="1.0" encoding="utf-8"?>
<shenye.vpn.android.widget.TouchableScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/connectedCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:contentPaddingBottom="12dp"
            app:contentPaddingTop="12dp"
            app:cardBackgroundColor="@color/green"
            android:visibility="gone">
            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/vpn_connected_header"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/uidText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/loading"
                        android:textColor="@color/primary"
                        android:textColorHighlight="@color/primary" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/status_row"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/expiredLbl"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_gravity="center_vertical"
                        android:text="@string/expired_date"
                        android:textColor="@android:color/white" />
                    <TextView
                        android:id="@+id/expiredText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/loading"
                        android:textColor="@color/primary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/status_row"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ipLbl"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="end"
                        android:text="@string/ip_address"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/ipText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/loading"
                        android:textColor="@color/primary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/status_row"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationLbl"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="end"
                        android:text="@string/location"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/loading"
                        android:textColor="@color/primary" />

                    <ImageView
                        android:id="@+id/flagView"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app"
                        android:scaleType="fitCenter" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/connectCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/card_padding"
            app:cardBackgroundColor="@android:color/transparent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/serverLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:layout_marginLeft="100dp"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/primary"
                        android:textColorHighlight="@color/primary"
                        android:text="@string/server_list" />

                    <com.devspark.robototextview.widget.RobotoButton
                        android:id="@+id/sortServerButton"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="100dp"
                        android:layout_marginRight="100dp"
                        android:background="@drawable/sort"
                        android:theme="@style/Theme.VPNht.SortButton" />

                </LinearLayout>
                <Spinner
                    android:id="@+id/locationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/speedCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/card_padding"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/inspeed"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/inSpeedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/loading"
                        android:textColor="@color/primary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_item_distance"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/outspeed"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/outSpeedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/loading"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.devspark.robototextview.widget.RobotoButton
                    android:id="@+id/connectButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="0dp"
                    android:textAllCaps="false"
                    android:text="@string/connect"
                    android:theme="@style/Theme.VPNht.PrimaryButton" />

                <com.devspark.robototextview.widget.RobotoButton
                    android:id="@+id/logoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:textAllCaps="false"
                    android:text="@string/logout"
                    android:theme="@style/Theme.VPNht.StopButton" />

                <com.devspark.robototextview.widget.RobotoButton
                    android:id="@+id/disconnectButton"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="30dp"
                    android:textAllCaps="false"
                    android:text="@string/disconnect"
                    android:theme="@style/Theme.VPNht.StopButton" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</shenye.vpn.android.widget.TouchableScrollView>